--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-youtube": "^10.1.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
