feat: chose ambient sounds using react-select

--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
+    "react-select": "^5.7.2",
     "react-youtube": "^10.1.0",
     "typescript": "5.0.2"
   },
